# study_room_reservation

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.en.md  README.md  netlify.toml  study_room_reservation.sql  study_room_reservation_backup.sql  概念结构设计说明书.docx  自习室预约系统物理结构.docx  自习室预约系统需求文档.docx  课程报告.docx
StudyroomBookingSystem-main/: .env.example  index.html  package-lock.json  package.json
StudyroomBookingSystem-main/src/: App.tsx  app.css  index.css  main.tsx
StudyroomBookingSystem-main/src/admin/: AdminLayout.tsx  AdminLogin.tsx  RequireAdmin.tsx  admin.css
StudyroomBookingSystem-main/src/components/: AppLayout.tsx  BottomNav.tsx  OrderCreatedModal.tsx  RequireAuth.tsx  Toast.tsx
StudyroomBookingSystem-main/src/config/: api.ts
StudyroomBookingSystem-main/src/context/: AppContext.tsx
StudyroomBookingSystem-main/src/pages/: Announcements.tsx  Booking.tsx  Breach.tsx  (+9 more)
snack-backend/: .env  Cargo.toml
snack-backend/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
sql/: after_reservation_cancel.txt  amount_calculate_.txt  before_reservation_update.txt  can_cancel_reservation.txt  cancel_unpaid_orders.txt  complete_expired_reservations.txt  detect_violation.txt  generate_foodorders_from_reservations.txt  generate_sample_reservations.txt  generate_sample_waitlist.txt  mark_failed_waitlist.txt  migrate_users_password_varchar256.sql  promote_waitlist_for_seat.txt  run.txt
src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
src/handles/: admin.rs  mod.rs  user.rs
(+8 files in other folders)
