[package]
name = "snack-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.4"
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
tracing-subscriber = "0.3"